--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -32,10 +32,14 @@
     "random",
     "generative"
   ],
-  "contributors": ["Jordan Peck", "Patrick U"],
+  "contributors": [
+    "Jordan Peck",
+    "Patrick U"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Auburn/FastNoiseLite/issues"
   },
-  "homepage": "https://github.com/Auburn/FastNoiseLite#readme"
+  "homepage": "https://github.com/Auburn/FastNoiseLite#readme",
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
